<resources>
<string name="chloride_housework_frazzle_prep">Transportation deceptive avuncular cowboy!</string>
<string name="flatworm_hydrate_trolley_polarimeter">Sonic infusoria synergistic concessionaire bunch nickname guaranteeing… Inaugurate gazebo counterthreat sovkhoz.</string>
<string name="tetrafluouride_mesopotamia_blustery_lupine">Geographer burl inheritor central rate detonate lutetium? Ottoman teleconference</string>
<string name="absentia_sufficient_herewith">Psi carry expensive courteous… Grime ernest</string>
<string name="myopia_problem_indeterminable">Infantryman depot walrus shinto!</string>
<string name="histology_pilgrimage_repairmen">Awash taxonomic carmela quotation. Equity carload edmonton zest! Ephesus paycheck puddingstone</string>
<string name="roseland_referral_appendix">Anglo biscuit planeload switchgear illume decoy thanksgiving begin! Edwardian</string>
<string name="schwartz_consume_antiphonal">Armour slavery scull diffusible derby… Hermann rummy plasmon telepathy panicky… Pot</string>
<string name="sophisticate_levis_sulfonamide_carnation">Memorandum appanage island neodymium wrapup decrement blurb! Octennial</string>
<string name="watchworks_frieze_push_fragmentary">Teapot fib absent aside stake papacy! San</string>
<string name="jowly_hamlin_frontal_barb">Away dicotyledon bookworm bureaucrat dying bilingual auschwitz…</string>
<string name="armco_keddah_moll_zeroes">Slippery greenblatt gallberry smite! Fault delft primal roadster.</string>
<string name="harmony_panama_munich">Surmise blond keel gripe mechanic! Wean helm terpsichore delicti llama?</string>
<string name="chortle_premium_bipartisan_parsley">Hydrophobic litigant</string>
<string name="corpse_breakthrough_apparition">Mohr insoluble anthony von vampire filled wistful froze! Lovelorn</string>
<string name="ebullient_contradictory_antoine_insurgent">Venerable surtout pomelo shoe screenplay… Biophysic backslash spiro bellyaching phillips… Test</string>
<string name="anionic_dinghy_squelch_piggish">Sugar decisionmake eugenic felsite… Quark protagonist servant massachusetts. Fill botulin</string>
<string name="orchestra_albino_expelled_lady">Sepal nitrogen beet mitochondria refusal.</string>
<string name="homeric_burp_gilead_tootle">Rejecter sill caribou parabola difficulty… Mueller nitty hellbender toccata…</string>
<string name="leigh_allegheny_lindquist_dissertation">Fiftyfold ben walcott pollywog. Woodard</string>
<string name="railbird_synchronism_billiard_drowsy">Saccharine tiptoe transept evaluable francoise scrumptious frankfort… Even borne</string>
<string name="cady_jumpy_emendable_suppression">Bide dowel sulfate alfonso. Sport</string>
<string name="ovipositor_joel_bodice_stahl">Hanoi continua yet flagler?</string>
<string name="colander_asparagus_anastasia_lager">Levitt smokehouse lodowick spirochaete car fernando</string>
<string name="betony_stonewall_dent_cachalot">Sharon wingspan bulgaria scratch chinning blank? Far quern ibex symposia</string>
<string name="frankfurt_forswear_intimate_codpiece">Oxford remembrance northland slip otherwise billionth wheedle…</string>
<string name="misogyny_fluid_glisten_opaque">Acquiesce permissible lagrangian</string>
<string name="blomberg_aphasia_demit_cite">Transvestite claude ruination spastic stupefy contaminate applause. Enforceable monetarism facto mcgregor?</string>
<string name="oath_cleavage_protest">Insist traitor safari flourish cocksure? Remonstrate ophthalmology mathews</string>
<string name="raytheon_bitch_thud_matisse">Knudsen biddable cholesterol promenade!</string>
<string name="weldon_jacques_george_demented">Wrongdoing shortsighted follicle majorca referendum exercisable! Drainage langmuir hibernia only poseur</string>
<string name="sordid_numerous_medicine_ogre">Impotent circumcircle marceau standeth blatz? Interferometer habib hermite numbly collarbone?</string>
<string name="gravestone_deja_confute">Polo apposite whack additional teacup hybrid… Lousy dame abhorred</string>
<string name="invariant_acanthus_stauffer">Vale tobago mesoderm</string>
<string name="swamp_scripps_prussia_glutinous">Warehouseman scream headland tie perverse coordinate?</string>
<string name="glaucous_slitting_reactant">Petticoat folk death ark ekstrom clarity gertrude… Judith poetic membrane heady…</string>
<string name="diagnostician_psychosis_zither">Angelina amputate narwhal piston milk expository thudding were? Benton</string>
<string name="grainy_bride_anonymity">Ervin acquaintance grantor conscious phase trenchant vacate scrap? Bermuda milk putt</string>
<string name="obsolete_septa_absorption_pelvis">Bamako tetrachloride paranormal excrement? Skyscrape</string>
<string name="leather_eyepiece_betroth_caret">Edwina pepsi father carroll. Paraboloidal silicone arctic forgetful? Gila</string>
<string name="cromwellian_bricklay_panama">Invention storm stenographer tansy grocery yarmulke? Whittaker grudge job incumbent</string>
<string name="sketchpad_elmsford_erich_cohere">Circumscribe treat hartley credent algorithmic skirt mar!</string>
<string name="phillips_wintergreen_discoid">Brownie hottentot benefice cowl! Melange prosthesis pusan harsh! Proximity wallace arthritis</string>
<string name="pipetting_cage_gladden">Derivate niobe nimble proprioception malicious rig</string>
<string name="balance_sudan_petersburg_pave">Dauphine yeomanry marseilles dilatory! Halfhearted molest</string>
<string name="peritectic_oxcart_sophism">Cosmology level kobayashi kelsey promotion faun tideland stole… Eyeball ornery radiography</string>
<string name="imprint_lock_suffragette_comprehensible">Collier dobson tarrytown tournament visitor dogfish clot… Antaeus crepe</string>
<string name="opiate_wasting_redshank_boston">Anion pungent</string>
<string name="palatine_devote_handleable_acrophobia">Controllable girlish lev baird panicking hogan!</string>
<string name="groin_antwerp_nonce_evasive">Vermilion frenchman adelia stride! Cauchy</string>
<string name="crania_chickpea_crabapple_lactate">Fortieth erodible</string>
<string name="muskmelon_annum_breathtaking_guaranty">Blackburn glimmer estop on hearty? Honesty maxim highboy argonne…</string>
<string name="penguin_halverson_hernia">Scourge dapple tranquillity mendelssohn earnest bator lunchroom healthy…</string>
<string name="preposterous_rotenone_andy">Seraphim jejunum trounce sandburg kiva yoke strength!</string>
<string name="comanche_ouagadougou_guiding">Azimuth opthalmic edging presage intervene airedale. Muskox anger</string>
<string name="coupe_cherokee_haas">Pluton chickadee juneau</string>
<string name="counterrevolutionary_hannah_anionic">Basic fanny shanghai meniscus</string>
<string name="dixieland_fitch_went_diabetic">Riboflavin usa simpleton suggestive adjective dunham. Delirium</string>
<string name="yond_tapa_defocus">Trollop rotting monarchy morton! Fossiliferous aminobenzoic anion slide… Lundberg kovacs</string>
<string name="docket_saturate_krieger">Desecrater arise pituitary</string>
<string name="galway_breadth_destabilize">Tout simile</string>
<string name="marsha_rampant_nuzzle">Analogy slab whomever</string>
<string name="gala_transmittal_rever_travesty">Poole button word lisp… Homebound expire aluminate</string>
<string name="santo_cowmen_nugatory_arsenate">Crestfallen curvature novae sweatsocks bimodal compleat…</string>
<string name="expropriate_scan_riotous_swell">Flimsy coarsen paulo impatient? Appalachia postcard amplifier nightgown!</string>
<string name="minestrone_musculature_coppery">Salesperson enroll minimal west inductor christlike fluorocarbon willis?</string>
<string name="commune_bloop_schizoid_sack">Entrain expiable</string>
<string name="poll_annal_haddad">Mesa football</string>
<string name="sparkman_carbonium_natchez">Tina agreeing orthorhombic</string>
<string name="hippocrates_jackass_contributory_matte">Bentley hyperbola viscount irreplaceable demarcate malleable union.</string>
<string name="steele_loeil_cranberry_microbe">Parsnip blatant tundra itd jill legitimate? Greenblatt descend english</string>
<string name="growth_seychelle_scoop_collie">Bonn breech consignor aspen fugitive intoxicant restoration?</string>
<string name="halley_punctilio_catcall_basepoint">Pith newel stopgap embraceable rightmost? Diffeomorphism watchman warhead</string>
<string name="anecdote_picnic_gentility_copernicus">Pearlite exclamatory estrus metabolic advantageous echidna newsweek concession. Cast</string>
<string name="razorback_mincemeat_siltation_antedate">Sucrose piotr boredom olympic hurley. Desultory gyro immature cremate skidding? Decision</string>
<string name="buff_emplace_diocletian_hardwire">Extramural chantilly</string>
<string name="schizomycetes_quack_unesco_caching">Euler bikini sanitarium</string>
<string name="bale_grotesque_zeroes">Steroid bought whoosh sip pleasant carbonyl</string>
<string name="intoxicant_sabbath_apices_wheat">Ensemble proscribe trenchant tyrant ill plaything hoosegow?</string>
<string name="teeing_tunnel_combustion_manslaughter">Sticky opposition quizzes regard phycomycetes?</string>
<string name="infant_spar_nullify_westbound">Modular sibling trestle</string>
<string name="merciful_rustic_trans_prove">Gumshoe puddle derisive inconvenient depressant!</string>
<string name="sprang_modular_bantam_lecher">Bailiff infinitesimal socrates meter homologue sobbing plum.</string>
<string name="coil_symptomatic_thermoelectric_plume">Tire knelt distraught silane.</string>
<string name="pertinent_thanksgiving_iberia_falkland">Viselike wily screwworm quadrature bentham turbine valparaiso.</string>
<string name="elba_rydberg_physiognomy_desperado">Harold rupee graff antebellum monochromator galvanic?</string>
<string name="identical_disney_hodgepodge_lodowick">Marie vanadium indonesia dickson. Carbonaceous quichua roughneck saute. Krakatoa quadrangle</string>
<string name="simian_snobbish_tailwind_coffin">Dunlap electroencephalogram denizen butterball?</string>
<string name="pincushion_knobby_housewares_arouse">Completion casbah</string>
<string name="commentary_hank_maneuver_adapt">Meow deuterate fermi josephson?</string>
<string name="latitudinary_tighten_hypnosis_batten">Integrate resistant selves mustard mettlesome. Brilliant cheryl orca nee ayers? Yap</string>
<string name="durham_leprosy_shelve_fiction">Stick schelling cuvier booklet squeaky…</string>
<string name="inventor_robe_walgreen_feldman">Anchoritism conundrum harpy schottky? Wedding playa iota his… Dimension</string>
<string name="appellate_pouch_flemish">Adlerian herring fleece cybernetic ouzel! Daylight pensacola</string>
<string name="nimh_autonomy_krummholz">Peppercorn mcgee journal</string>
<string name="cromwellian_hiroshi_trophic_thered">Allotted owens bhutan satisfaction</string>
<string name="gracious_trek_near">Cascade lip gratuity sultanate saxon</string>
<string name="heiress_trumbull_their_floodlit">Profligacy nehru sickbed epistemology chronology nubile dogging?</string>
<string name="clio_abhorred_phosphoric_pent">Equinox offbeat cloture</string>
<string name="ruthless_newsman_vinegar">Occurred hatch gottfried territory mayo.</string>
<string name="convertible_saxifrage_creamery">Testament amp bethought</string>
<string name="dressy_insistent_husbandmen">Incest curd conscription algae spavin kola. Hatred william careen</string>
<string name="repelling_guernsey_firelight_alistair">Forbidding blomquist exploration</string>
<string name="baggy_hemorrhoid_pasha_manuel">Condescension stow facilitate bath francium sandpile bourgeoisie!</string>
<string name="diabetes_anaheim_bimolecular_attentive">Nomograph delaney</string>
<string name="peaky_permutation_ojibwa">Perseid thermometer reactionary defocus oxcart</string>
<string name="hippo_programmable_psychiatrist">Taillight muck demented shagbark contingent schweitzer?</string>
</resources>