<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<LinearLayout android:gravity="center_horizontal|start" android:id="@+id/tensorLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/guffawWristbandView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
<Button android:hint="@string/opiate_wasting_redshank_boston" android:id="@+id/processionNewellView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/marsha_rampant_nuzzle"/>
<Button android:background="@color/tarantara_iodine" android:hint="@string/sparkman_carbonium_natchez" android:id="@+id/municipalOakenView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/commentary_hank_maneuver_adapt" android:textColor="#D1DF9122"/>
<CheckBox android:background="@color/grit_puke_diagnoses" android:hint="@string/baggy_hemorrhoid_pasha_manuel" android:id="@+id/linebackerCharismaView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/commune_bloop_schizoid_sack" android:textColor="@color/pope_tripoli"/>
<EditText android:background="@color/stead_given" android:hint="@string/teeing_tunnel_combustion_manslaughter" android:id="@+id/blazeOxidantView" android:inputType="textVisiblePassword" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/railbird_synchronism_billiard_drowsy" android:textColor="@color/throaty_runny"/>
<EditText android:background="#871D4EA6" android:hint="@string/nimh_autonomy_krummholz" android:id="@+id/adaptBearView" android:inputType="textCapCharacters" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/obsolete_septa_absorption_pelvis" android:textSize="@dimen/stroll_autocracy_textsize"/>
<Button android:hint="@string/sketchpad_elmsford_erich_cohere" android:id="@+id/cubbyWouldView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/cady_jumpy_emendable_suppression" android:textColor="#1A7E15B8"/>
<Button android:background="@color/oxen_pigeonberry_jacobean" android:hint="@string/elba_rydberg_physiognomy_desperado" android:id="@+id/penumbralAffectateView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/dixieland_fitch_went_diabetic" android:textColor="@color/assimilable_steradian"/>
<LinearLayout android:gravity="bottom|center_vertical" android:id="@+id/dictionDecemberLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal">
<Button android:background="@color/eradicate_indiscoverable_carbonic" android:hint="@string/ruthless_newsman_vinegar" android:id="@+id/fredPattyView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/blomberg_aphasia_demit_cite" android:textSize="28sp"/>
<CheckBox android:background="@color/metazoan_steradian" android:hint="@string/pincushion_knobby_housewares_arouse" android:id="@+id/slothfulView" android:layout_height="wrap_content" android:layout_margin="@dimen/april_ballroom_width" android:layout_width="wrap_content" android:text="@string/betony_stonewall_dent_cachalot" android:textColor="#57A8D0" android:textSize="@dimen/aerospace_mcfadden_textsize"/>
</LinearLayout>
<Button android:background="@color/crock_thirdhand" android:hint="@string/bale_grotesque_zeroes" android:id="@+id/breadrootEluteView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="28dp" android:paddingEnd="@dimen/northeastern_jounce_size" android:paddingStart="@dimen/lingual_jonas_margin" android:text="@string/leigh_allegheny_lindquist_dissertation" android:textColor="@color/metazoan_steradian"/>
<CheckedTextView android:hint="@string/dressy_insistent_husbandmen" android:id="@+id/intrusiveView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/invariant_acanthus_stauffer" android:textColor="@color/exultant_abdicate_more"/>
<Button android:background="@color/payroll_acerbic" android:hint="@string/diabetes_anaheim_bimolecular_attentive" android:id="@+id/paceView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/infant_spar_nullify_westbound" android:textColor="@color/nikko_octagon_frock"/>
<TextView android:background="@color/orestes_ragusan" android:hint="@string/raytheon_bitch_thud_matisse" android:id="@+id/irreproducibleVexatiousView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/halley_punctilio_catcall_basepoint" android:textColor="@color/dismal_technique"/>
<AutoCompleteTextView android:background="#C36BC6" android:hint="@string/balance_sudan_petersburg_pave" android:id="@+id/dynasticPlowmenView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/phillips_wintergreen_discoid" android:textColor="#1428B0DF"/>
</LinearLayout>
<TextView android:background="@color/orestes_ragusan" android:hint="@string/ovipositor_joel_bodice_stahl" android:id="@+id/guffawWristbandView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/diagnostician_psychosis_zither" android:textColor="@color/alabaster_frantic" app:layout_constraintBottom_toTopOf="@id/livestockExegeteView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tensorLayout"/>
<CheckedTextView android:background="@color/perquisite_muddle_immodesty" android:hint="@string/simian_snobbish_tailwind_coffin" android:id="@+id/livestockExegeteView" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/aminobenzoic_lymphocyte" android:layout_marginStart="@dimen/pirogue_hugging_height" android:layout_marginTop="@dimen/couplet_limbic_padding" android:layout_width="wrap_content" android:text="@string/gala_transmittal_rever_travesty" android:textColor="@color/bursty_imprecise" android:textSize="20sp" app:layout_constraintBottom_toTopOf="@id/bawdyAssumeView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/guffawWristbandView"/>
<CheckedTextView android:background="#960C0335" android:hint="@string/hippo_programmable_psychiatrist" android:id="@+id/bawdyAssumeView" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sustain_jacob_padding" android:layout_width="match_parent" android:text="@string/santo_cowmen_nugatory_arsenate" app:layout_constraintBottom_toTopOf="@id/artemisView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/livestockExegeteView"/>
<AutoCompleteTextView android:background="#9907DA" android:hint="@string/weldon_jacques_george_demented" android:id="@+id/artemisView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/glaucous_slitting_reactant" android:textColor="#FB5C10" android:textSize="@dimen/demeter_hormonal_textsize" app:layout_constraintBottom_toTopOf="@id/acculturateView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/bawdyAssumeView"/>
<Button android:background="@color/levity_scapular_vacuole" android:hint="@string/inventor_robe_walgreen_feldman" android:id="@+id/acculturateView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingTop="16dp" android:text="@string/identical_disney_hodgepodge_lodowick" android:textColor="@color/honey_wynn" app:layout_constraintBottom_toTopOf="@id/similitudeArtichokeView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/artemisView"/>
<TextView android:background="@color/morrison_esophagi" android:hint="@string/razorback_mincemeat_siltation_antedate" android:id="@+id/similitudeArtichokeView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/docket_saturate_krieger" android:textColor="#E181C2" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/acculturateView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
