<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<TextView android:background="@color/delegate_hedge" android:hint="@string/coil_symptomatic_thermoelectric_plume" android:id="@+id/countermanInertiaView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/colander_asparagus_anastasia_lager" android:textColor="@color/shipwreck_recourse_emil" app:layout_constraintBottom_toTopOf="@id/blatView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<CheckBox android:background="@color/gluing_virgin_madsen" android:hint="@string/sprang_modular_bantam_lecher" android:id="@+id/blatView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/galway_breadth_destabilize" android:textColor="#9523AB" app:layout_constraintBottom_toTopOf="@id/yourselfLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/countermanInertiaView"/>
<LinearLayout android:gravity="start" android:id="@+id/yourselfLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/onceGingerView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/blatView">
<AutoCompleteTextView android:background="#1540E6" android:hint="@string/buff_emplace_diocletian_hardwire" android:id="@+id/obedientHerniaView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/minestrone_musculature_coppery" android:textColor="@color/pardon_march_jockstrap"/>
<Button android:background="@color/gill_crossroad_assert" android:hint="@string/penguin_halverson_hernia" android:id="@+id/matchmakeEmblazonView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/cervix_mamma_width" android:text="@string/cromwellian_bricklay_panama" android:textColor="@color/bauer_anyone"/>
<Button android:background="@color/layman_corp" android:hint="@string/pipetting_cage_gladden" android:id="@+id/cruxView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/grainy_bride_anonymity" android:textColor="@color/defensive_minor_continual" android:textSize="@dimen/huzzah_carob_textsize"/>
<Button android:background="@color/gunfire_dorcas_concurred" android:hint="@string/crania_chickpea_crabapple_lactate" android:id="@+id/authoritativeColossiView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/gravestone_deja_confute" android:textColor="@color/system_keith_barrier"/>
<CheckedTextView android:background="@color/frizzle_dada" android:hint="@string/muskmelon_annum_breathtaking_guaranty" android:id="@+id/bunchThoroughbredView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/mobbing_grossman_size" android:paddingTop="@dimen/saxon_mayhem_height" android:text="@string/peritectic_oxcart_sophism"/>
<EditText android:background="#FB4C31C6" android:hint="@string/hippocrates_jackass_contributory_matte" android:id="@+id/regardView" android:inputType="textCapCharacters" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/leather_eyepiece_betroth_caret" android:textColor="#F0C27223"/>
<CheckBox android:background="@color/crappie_guide" android:hint="@string/clio_abhorred_phosphoric_pent" android:id="@+id/lascarAnastasiaView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingEnd="@dimen/flip_immortal" android:paddingStart="@dimen/declarator_ingrained_size" android:text="@string/frankfurt_forswear_intimate_codpiece" android:textColor="@color/homogeneity_padlock"/>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/mattressSunriseLayout" android:layout_height="wrap_content" android:layout_width="wrap_content">
<EditText android:hint="@string/homeric_burp_gilead_tootle" android:id="@+id/woodcockIntransigentView" android:inputType="textVisiblePassword" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/pertinent_thanksgiving_iberia_falkland" app:layout_constraintBottom_toTopOf="@id/churchmenSpokesmanView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<CheckedTextView android:background="@color/tintype_racial" android:hint="@string/convertible_saxifrage_creamery" android:id="@+id/churchmenSpokesmanView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/imprint_lock_suffragette_comprehensible" android:textColor="@color/scratchy_plyscore" app:layout_constraintBottom_toTopOf="@id/testamentaryView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/woodcockIntransigentView"/>
<AutoCompleteTextView android:hint="@string/counterrevolutionary_hannah_anionic" android:id="@+id/testamentaryView" android:layout_height="wrap_content" android:layout_width="0dp" android:padding="32dp" android:text="@string/latitudinary_tighten_hypnosis_batten" app:layout_constraintBottom_toTopOf="@id/barbecueView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/churchmenSpokesmanView"/>
<CheckedTextView android:background="@color/afterbirth_mouton_universal" android:hint="@string/steele_loeil_cranberry_microbe" android:id="@+id/barbecueView" android:layout_height="wrap_content" android:layout_width="@dimen/jovanovich_pawn_size" android:paddingEnd="@dimen/mooch_scrape_height" android:paddingStart="34dp" android:text="@string/poll_annal_haddad" android:textColor="@color/tiffany_each" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/testamentaryView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
<EditText android:hint="@string/intoxicant_sabbath_apices_wheat" android:id="@+id/breechesHoneView" android:inputType="textCapCharacters" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/repelling_guernsey_firelight_alistair" android:textColor="@color/bureaucratic_sonant_irrevocable"/>
<TextView android:background="@color/jewelry_bridget" android:hint="@string/sordid_numerous_medicine_ogre" android:id="@+id/apologeticHurrahView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/found_madam_padding" android:paddingTop="@dimen/indenture_swill_width" android:text="@string/preposterous_rotenone_andy" android:textColor="@color/elute_shuffle"/>
<EditText android:background="@color/assimilable_steradian" android:hint="@string/palatine_devote_handleable_acrophobia" android:id="@+id/backFollicularView" android:inputType="text" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/weldon_jacques_george_demented" android:textColor="@color/delegate_hedge"/>
<Button android:hint="@string/groin_antwerp_nonce_evasive" android:id="@+id/depotView" android:layout_height="wrap_content" android:layout_margin="@dimen/array_kermit_height" android:layout_width="wrap_content" android:text="@string/schizomycetes_quack_unesco_caching" android:textSize="@dimen/nell_palmyra_textsize"/>
<AutoCompleteTextView android:background="@color/kirchner_photometry_fluorescent" android:hint="@string/anecdote_picnic_gentility_copernicus" android:id="@+id/obedientSluggingView" android:layout_height="wrap_content" android:layout_margin="@dimen/vitamin_provence_size" android:layout_width="match_parent" android:text="@string/merciful_rustic_trans_prove" android:textColor="#10989DE5"/>
<CheckBox android:background="@color/metazoan_steradian" android:hint="@string/growth_seychelle_scoop_collie" android:id="@+id/berkeliumView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/yond_tapa_defocus" android:textColor="#5CEDC132" android:textSize="@dimen/coachman_seductive_textsize"/>
<EditText android:background="@color/piecemeal_ruben_gibraltar" android:hint="@string/oath_cleavage_protest" android:id="@+id/indeedNightingaleView" android:inputType="textCapCharacters" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/durham_leprosy_shelve_fiction" android:textColor="@color/stetson_gust_affix"/>
<CheckBox android:background="#4C90E8" android:hint="@string/coupe_cherokee_haas" android:id="@+id/batteryGorgonView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/swamp_scripps_prussia_glutinous" android:textColor="@color/alexandra_hagiography_pollock"/>
<AutoCompleteTextView android:background="@color/expository_summit" android:hint="@string/comanche_ouagadougou_guiding" android:id="@+id/effortView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/roseland_referral_appendix" android:textColor="@color/natalie_medea"/>
<CheckBox android:background="@color/fraudulent_sobriety_intolerable" android:hint="@string/expropriate_scan_riotous_swell" android:id="@+id/mooreView" android:layout_height="wrap_content" android:layout_margin="@dimen/foolscap_totalitarian" android:layout_width="wrap_content" android:text="@string/misogyny_fluid_glisten_opaque" android:textColor="#C0AC2E15"/>
</LinearLayout>
<CheckedTextView android:background="@color/halcyon_vicelike_chronography" android:hint="@string/gracious_trek_near" android:id="@+id/onceGingerView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/bumblebee_full_padding" android:layout_marginEnd="@dimen/miocene_renoir_width" android:layout_marginStart="12dp" android:layout_marginTop="@dimen/tulle_kinky" android:layout_width="0dp" android:text="@string/heiress_trumbull_their_floodlit" android:textColor="@color/especial_waals" android:textSize="@dimen/tomblike_buckskin_textsize" app:layout_constraintBottom_toTopOf="@id/newtView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/yourselfLayout"/>
<AutoCompleteTextView android:background="#BDCA4509" android:hint="@string/cromwellian_hiroshi_trophic_thered" android:id="@+id/newtView" android:layout_height="wrap_content" android:layout_width="@dimen/erode_bowerbird_height" android:padding="@dimen/trot_married_size" android:text="@string/appellate_pouch_flemish" android:textColor="@color/army_influenza_begun" app:layout_constraintBottom_toTopOf="@id/indisposeHardheartedView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/onceGingerView"/>
<AutoCompleteTextView android:hint="@string/sketchpad_elmsford_erich_cohere" android:id="@+id/indisposeHardheartedView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/peaky_permutation_ojibwa" android:textColor="@color/beck_brash" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/newtView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
